--- a/calculator.html
+++ b/calculator.html
@@ -7,6 +7,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.9/angular.min.js"></script>
 </head>
 <body>
+    <mark><h1>CALCULATOR</h1></mark>
     <div ng-app="">
         <div class="input-group">
             <span class="input-group-text">number 1 and number 2</span>
